--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,12 +4,29 @@
   // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
   "configurations": [
-    {
+  {
+    "name": "Launch file",
+    "type": "go",
+    "request": "launch",
+    "mode": "debug",
+    "program": "${file}",
+    "args": [
+      "--",
+      "1-ABC-123",
+      "blah"
+    ]
+  },
+  {
       "name": "Launch Package",
       "type": "go",
       "request": "launch",
       "mode": "auto",
-      "program": "${fileDirname}"
+      "program": "${fileDirname}",
+      "args": [
+        "--",
+        "1-ABC-123",
+        "blah"
+      ]
     }
   ]
 }
